add file module and add tests for it

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,7 @@ set(target test)
 add_executable(${target} main.c)
 target_link_libraries(${target} ${PROJECT_NAME})
 target_include_directories(${target} PRIVATE ${PROJECT_NAME})
+
+target_compile_definitions(${target} PRIVATE
+    "-Dtest_path=\"${CMAKE_CURRENT_SOURCE_DIR}\""
+)
