--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,24 @@ cmake_minimum_required(VERSION 3.16)
 
 project(clib C)
 
-option(windows "build for Windows OS target" OFF)
-option(macos "build for Mac OS target" OFF)
-option(linux "build for linux OS target" ON)
+set(target "linux" CACHE STRING "Choose one of 'linux'(default),'windows', 'macos'")
+option(example "build examples" OFF)
+option(test "build tests" OFF)
 
 set(CMAKE_C_STANDARD_REQUIRED c17)
 set(CMAKE_C_COMPILER ${CMAKE_SOURCE_DIR}/bin/zig-cc)
-if(windows)
+message(${target})
+if(${target} STREQUAL "windows")
     set(CMAKE_C_COMPILER_ARG1 --target=x86_64-windows-gnu)
-elseif(macos)
+elseif(${target} STREQUAL "macos")
     set(CMAKE_C_COMPILER_ARG1 --target=x86_64-macos-gnu)
-elseif(linux)
+elseif(${target} STREQUAL "linux")
     set(CMAKE_C_COMPILER_ARG1 --target=x86_64-linux-gnu)
+else()
+    message(FATAL_ERROR "target: Choose one of 'linux'(default),'windows', 'macos'")
 endif()
 set(CMAKE_AR ${CMAKE_SOURCE_DIR}/bin/zig-ar)
 set(CMAKE_RANLIB ${CMAKE_SOURCE_DIR}/bin/zig-ranlib)
-
-option(example "build examples" OFF)
-option(test "build tests" OFF)
 
 add_subdirectory(lib)
 
