--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,5 +57,5 @@ jobs:
       working-directory: ${{github.workspace}}/build/test
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/test/test.exe
+      run: ${{github.workspace}}/build/test/${{env.BUILD_TYPE}}/test.exe
       
