array: bug: array size should be constant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.21)
 project(clib C)
 set(C_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON) # PIC
+if(UNIX)
+    set(COMPILE_OPTIONS "-Wall -Wextra -Werror -pedantic")
+endif()
 
 option(BUILD_SHARED_LIBS "Build libraries as SHARED" OFF)   # static by default
 option(test "enable tests" OFF)
