--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,12 @@ cmake_minimum_required(VERSION 3.21)
 project(clib C)
 set(C_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON) # PIC
-if(UNIX)
-    set(COMPILE_OPTIONS "-Wall -Wextra -Werror -pedantic")
+if (MSVC)
+    # warning level 4
+    add_compile_options(/W4)
+else()
+    # additional warnings
+    add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 option(BUILD_SHARED_LIBS "Build libraries as SHARED" OFF)   # static by default
