--- a/array/CMakeLists.txt
+++ b/array/CMakeLists.txt
@@ -18,5 +18,5 @@ install(TARGETS array)
 if(test)
     add_executable(test_array test_array.c)
     target_link_libraries(test_array array)
-    install(TARGETS test_array)
+    add_test(NAME test_array COMMAND test_array)
 endif()
