--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,10 +30,11 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Test
-      working-directory: ${{github.workspace}}/build/array
+      working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/array/test_array
+      # run: ctest --test-dir ${{github.workspace}}/build
+      run: ctest
       
   build-window:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
@@ -57,5 +58,6 @@ jobs:
       working-directory: ${{github.workspace}}/build/array
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/array/${{env.BUILD_TYPE}}/test_array.exe
+      # run: ${{github.workspace}}/build/array/${{env.BUILD_TYPE}}/test_array.exe
+      run: ctest
       
