--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,7 +34,7 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       # run: ctest --test-dir ${{github.workspace}}/build
-      run: ctest --config ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}}
       
   build-window:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
@@ -59,5 +59,5 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       # run: ${{github.workspace}}/build/array/${{env.BUILD_TYPE}}/test_array.exe
-      run: ctest --config ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}}
       
