--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,6 @@ if(test)
 endif()
 
 add_subdirectory(array)
-add_subdirectory(map)
 add_subdirectory(common)
+add_subdirectory(map)
+add_subdirectory(str)
