--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ else()
 endif()
 
 option(BUILD_SHARED_LIBS "Build libraries as SHARED" OFF)   # static by default
+option(ui "enable ui" ON)
 option(test "enable tests" OFF)
 if(test)
     enable_testing()
@@ -22,4 +23,6 @@ add_subdirectory(io)
 add_subdirectory(log)
 add_subdirectory(map)
 add_subdirectory(str)
+if(ui)
 add_subdirectory(ui)
+endif()
