cmake: - postfix debug targets names - add more compiler/linker flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,30 @@ cmake_minimum_required(VERSION 3.21)
 project(clib C)
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON) # PIC
+set(CMAKE_DEBUG_POSTFIX _debug)
 if (MSVC)
     # warning level 4
-    add_compile_options(/W4)
+    add_compile_options(
+        /Wall
+        /WX
+        /utf-8
+        $<$<CONFIG:DEBUG>:/fsanitize=address>
+        $<$<CONFIG:DEBUG>:/RTCcsu>
+    )
 else()
     # additional warnings
-    add_compile_options(-Wall -Wpedantic -Werror)
+    add_compile_options(
+        -Wall
+        -Wpedantic
+        -Werror
+        $<$<CONFIG:RELEASE>:-D_FORTIFY_SOURCE=2>
+        $<$<CONFIG:DEBUG>:-fsanitize=address,undefined>
+        $<$<CONFIG:DEBUG>:-fstack-protector-strong>
+        $<$<CONFIG:DEBUG>:--param=ssp-buffer-size=4>
+        $<$<CONFIG:DEBUG>:-fstack-clash-protection>
+        $<$<CONFIG:DEBUG>:-fcf-protection>
+    )
+    add_link_options($<$<CONFIG:DEBUG>:-fsanitize=address,undefined>)
 endif()
 
 option(BUILD_SHARED_LIBS "Build libraries as SHARED" OFF)   # static by default
